Added images classes

--- a/PinSharp/PinSharp.csproj
+++ b/PinSharp/PinSharp.csproj
@@ -61,10 +61,11 @@
     <Compile Include="Models\Counts\PinCounts.cs" />
     <Compile Include="Models\Counts\UserCounts.cs" />
     <Compile Include="Models\Exceptions\PinterestApiException.cs" />
+    <Compile Include="Models\Images\PinImages.cs" />
+    <Compile Include="Models\Images\UserImages.cs" />
     <Compile Include="Models\Interest.cs" />
     <Compile Include="IPinsApi.cs" />
     <Compile Include="Models\Pin.cs" />
-    <Compile Include="Models\Responses\CreatePinResponse.cs" />
     <Compile Include="PinterestApi.Boards.cs" />
     <Compile Include="PinterestApi.cs" />
     <Compile Include="Models\PinterestImage.cs" />
@@ -83,7 +84,9 @@
     </None>
     <Compile Include="PinterestApi.Me.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\Responses\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
