Added IHttpClient interface and implementation and renamed Delete to DeleteAsync

--- a/PinSharp/PinSharp.csproj
+++ b/PinSharp/PinSharp.csproj
@@ -52,7 +52,9 @@
     <Compile Include="CustomPropertyContractResolver.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="HttpClient.cs" />
     <Compile Include="IBoardsApi.cs" />
+    <Compile Include="IHttpClient.cs" />
     <Compile Include="IMeApi.cs" />
     <Compile Include="IUsersApi.cs" />
     <Compile Include="Models\Board.cs" />
