Add nuget package dependency on Microsoft.AspNet.WebApi.Client v5.2.3

--- a/Package/PinSharp.nuspec
+++ b/Package/PinSharp.nuspec
@@ -18,6 +18,7 @@
       <frameworkAssembly assemblyName="System.Net.Http.Formatting"  />
     </frameworkAssemblies>
     <dependencies>
+      <dependency id="Microsoft.AspNet.WebApi.Client" version="5.2.3" />
       <dependency id="Newtonsoft.Json" version="7.0.1" />
     </dependencies>
   </metadata>
