--- a/Package/PinSharp.nuspec
+++ b/Package/PinSharp.nuspec
@@ -3,14 +3,14 @@
   <metadata>
     <title>PinSharp</title>
     <id>PinSharp</id>
-    <version>1.0</version>
+    <version>1.1</version>
     <authors>Søren Kruse</authors>
     <licenseUrl>https://github.com/Krusen/PinSharp/blob/master/LICENSE.MD</licenseUrl>
     <projectUrl>https://github.com/Krusen/PinSharp</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/Krusen/PinSharp/master/Package/icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>An async wrapper library for the Pinterest API</description>
-    <releaseNotes></releaseNotes>
+    <releaseNotes>Updated models to match changes to API responses</releaseNotes>
     <copyright></copyright>
     <tags>pinsharp pinterest api client wrapper library</tags>
     <frameworkAssemblies>
