--- a/PinSharp/PinSharp.csproj
+++ b/PinSharp/PinSharp.csproj
@@ -89,8 +89,8 @@
     <Compile Include="Api\PinterestApi.Pins.cs" />
     <Compile Include="Api\PinterestApi.Users.cs" />
     <Compile Include="Api\PathBuilder.cs" />
-    <Compile Include="PinterestAuthClient.cs" />
-    <Compile Include="PinterestClient.cs" />
+    <Compile Include="PinSharpAuthClient.cs" />
+    <Compile Include="PinSharpClient.cs" />
     <Compile Include="Api\Scopes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\InterfaceConverter.cs" />
