--- a/PinSharp.Tests/PinSharp.Tests.csproj
+++ b/PinSharp.Tests/PinSharp.Tests.csproj
@@ -2,24 +2,29 @@
 
   <PropertyGroup>
     <TargetFramework>net452</TargetFramework>
-    <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PinSharp\PinSharp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-    <PackageReference Include="AutoFixture" Version="3.50.2" />
-    <PackageReference Include="AutoFixture.AutoNSubstitute" Version="3.50.2" />
-    <PackageReference Include="AutoFixture.Xunit2" Version="3.50.2" />
-    <PackageReference Include="FluentAssertions" Version="4.19.2" />
-    <PackageReference Include="NSubstitute" Version="2.0.2" />
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.extensibility.execution" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="AutoFixture" Version="3.50.3" />
+    <PackageReference Include="AutoFixture.AutoNSubstitute" Version="3.50.3" />
+    <PackageReference Include="AutoFixture.Xunit2" Version="3.50.3" />
+    <PackageReference Include="FluentAssertions" Version="4.19.3" />
+    <PackageReference Include="NSubstitute" Version="2.0.3" />
+    <PackageReference Include="xunit" Version="2.3.0-beta3-build3705" />
+    <PackageReference Include="xunit.core" Version="2.3.0-beta3-build3705" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.3.0-beta3-build3705" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta3-build3705" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta3-build3705" />
   </ItemGroup>
 
 </Project>
