Fix some unit test issues

--- a/PinSharp.Tests/PinSharp.Tests.csproj
+++ b/PinSharp.Tests/PinSharp.Tests.csproj
@@ -19,12 +19,17 @@
     <PackageReference Include="AutoFixture.AutoNSubstitute" Version="3.50.3" />
     <PackageReference Include="AutoFixture.Xunit2" Version="3.50.3" />
     <PackageReference Include="FluentAssertions" Version="4.19.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="NSubstitute" Version="2.0.3" />
-    <PackageReference Include="xunit" Version="2.3.0-beta3-build3705" />
-    <PackageReference Include="xunit.core" Version="2.3.0-beta3-build3705" />
-    <PackageReference Include="xunit.extensibility.execution" Version="2.3.0-beta3-build3705" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta3-build3705" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta3-build3705" />
+    <PackageReference Include="xunit" Version="2.3.0-beta4-build3742" />
+    <PackageReference Include="xunit.core" Version="2.3.0-beta4-build3742" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.3.0-beta4-build3742" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta4-build3742" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta4-build3742" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
 </Project>
